--- a/index.html
+++ b/index.html
@@ -5,12 +5,11 @@
     <meta name="viewport" content="initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
     <title></title>
     <script type="text/javascript">
-        $(document).ready(function () {
-            window.location.href="login.html"
-        });
+        document.onunload=function () {
+            window.location.href="login.html";
+        }
     </script>
 </head>
 <body>
-<script type="text/javascript" src="js/jquery/jquery-2.2.0.min.js"></script>
 </body>
 </html>
