--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
     <title></title>
     <script type="text/javascript">
-        document.onunload=function () {
+        window.onload=function () {
             window.location.href="login.html";
         }
     </script>
