--- a/login.html
+++ b/login.html
@@ -16,6 +16,7 @@
     <input type="password" placeholder="password" id="userPsw"/>
     <button class="mui-btn-block mui-badge-purple mt10" id="loginIn">登录</button>
     <div class="ct_r">
+        <span class="clr3f" id="errorTip"></span>
         <span class="clr3f">注册</span>
     </div>
 </div>
