--- a/login.html
+++ b/login.html
@@ -16,7 +16,7 @@
     <input type="password" placeholder="password" id="userPsw"/>
     <button class="mui-btn-block mui-badge-purple mt10" id="loginIn">登录</button>
     <span class="clr3f disp1 ct_l wt50" id="errorTip"></span>
-    <span class="clr3f disp1">注册</span>
+    <span class="clr3f disp1 ct_r">注册</span>
 </div>
 </body>
 <script type="text/javascript" src="js/jquery/jquery-2.2.0.min.js"></script>
