通过提示测试

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <title></title>
     <script type="text/javascript">
         window.onload=function () {
+            alert(2)
             window.location.href="login.html";
         }
     </script>
