--- a/login.html
+++ b/login.html
@@ -4,6 +4,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="initial-scale=1.0, maximum-scale=1.0, user-scalable=no"/>
     <link rel="stylesheet" href="js/mui/css/mui.min.css"/>
+    <link rel="stylesheet" href="js/weui/css/weui.min.css"/>
     <link rel="stylesheet" href="js/weui/css/jquery-weui.min.css"/>
     <link rel="stylesheet" href="css/common.css"/>
     <title></title>
