--- a/login.html
+++ b/login.html
@@ -8,10 +8,17 @@
     <link rel="stylesheet" href="js/weui/css/jquery-weui.min.css"/>
     <link rel="stylesheet" href="css/common.css"/>
     <title></title>
+    <style>
+        body {
+            background-image: url('images/login/timg2.jpg');
+            background-size:100% 100%;
+            height: -webkit-fill-available;
+        }
+    </style>
 </head>
-<body class="bgc30">
+<body class="">
 <div class="ct_center">
-    <div>ceshdddi</div>
+    <div class="clr3f"></div>
     <label class="clr3f ct_l">用户名</label>
     <input type="text" placeholder="ID" id="userId"/>
     <label class="clr3f ct_l">密码</label>
