--- a/login.html
+++ b/login.html
@@ -12,7 +12,7 @@
         body {
             background-image: url('images/login/timg2.jpg');
             background-size:100% 100%;
-            height: -webkit-fill-available;
+            height:100%;
         }
     </style>
 </head>
