--- a/login.html
+++ b/login.html
@@ -10,13 +10,15 @@
     <title></title>
     <style>
         body {
-            background-image: url('images/login/timg2.jpg');
-            background-size:100% 100%;
-            height: -webkit-fill-available;
+            background: url('images/login/timg2.jpg');
+            margin: 0;
+            padding: 0;
+            min-height: 100vh;
+            background-size: cover;
         }
     </style>
 </head>
-<body class="">
+<body style="width:100%; height:100%;">
 <div class="ct_center">
     <div class="clr3f"></div>
     <label class="clr3f ct_l">用户名</label>
