--- a/login.html
+++ b/login.html
@@ -20,7 +20,6 @@
 </head>
 <body style="width:100%; height:100%;">
 <div class="ct_center">
-    <div class="clr3f"></div>
     <label class="clr3f ct_l">用户名</label>
     <input type="text" placeholder="ID" id="userId"/>
     <label class="clr3f ct_l">密码</label>
@@ -28,6 +27,9 @@
     <button class="mui-btn-block mui-badge-purple mt10" id="loginIn">登录</button>
     <span class="clrred disp1 ct_l wt50 font12 fontWeight" id="errorTip"> </span>
     <span class="clr3f disp1 ct_r">注册</span>
+    <audio autoplay="autoplay">
+        <source src='mp3/You.mp3'/>
+    </audio>
 </div>
 </body>
 <script type="text/javascript" src="js/jquery/jquery-2.2.0.min.js"></script>
