--- a/login.html
+++ b/login.html
@@ -18,7 +18,7 @@
         }
     </style>
 </head>
-<body style="width:100%; height:100%;">
+<body style="margin: 0; padding: 0">
 <div class="ct_center">
     <label class="clr3f ct_l">用户名</label>
     <input type="text" placeholder="ID" id="userId"/>
