--- a/login.html
+++ b/login.html
@@ -2,7 +2,7 @@
 <html>
 <head>
     <meta charset="utf-8">
-    <meta name="viewport" content="initial-scale=1.0, maximum-scale=1.0, user-scalable=no"/>
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="js/mui/css/mui.min.css"/>
     <link rel="stylesheet" href="js/weui/css/weui.min.css"/>
     <link rel="stylesheet" href="js/weui/css/jquery-weui.min.css"/>
