--- a/login.html
+++ b/login.html
@@ -21,9 +21,9 @@
 <body style="margin: 0; padding: 0">
 <div class="ct_center">
     <label class="clr3f ct_l">用户名</label>
-    <input type="text" placeholder="ID" id="userId"/>
+    <input type="text" placeholder="随便" id="userId"/>
     <label class="clr3f ct_l">密码</label>
-    <input type="password" placeholder="password" id="userPsw"/>
+    <input type="password" placeholder="随便" id="userPsw"/>
     <button class="mui-btn-block mui-badge-purple mt10" id="loginIn">登录</button>
     <span class="clrred disp1 ct_l wt50 font12 fontWeight" id="errorTip"> </span>
     <span class="clr3f disp1 ct_r">注册</span>
